# bigsound

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
configs/pipewire/: 10-bigsound.conf.template
crates/big-bass/: Cargo.toml
crates/big-bass-ladspa/: Cargo.toml
crates/big-bass-ladspa/src/: lib.rs
crates/big-bass/src/: biquad.rs  lib.rs
crates/big-clarity/: Cargo.toml
crates/big-clarity-ladspa/: Cargo.toml
crates/big-clarity-ladspa/src/: lib.rs
crates/big-clarity/src/: lib.rs
crates/big-cross/: Cargo.toml
crates/big-cross-ladspa/: Cargo.toml
crates/big-cross-ladspa/src/: lib.rs
crates/big-cross/src/: lib.rs
crates/big-cross/tests/: chain_interaction.rs
crates/big-loud/: Cargo.toml
crates/big-loud-ladspa/: Cargo.toml
crates/big-loud-ladspa/src/: lib.rs
crates/big-loud/src/: lib.rs
crates/big-space/: Cargo.toml
crates/big-space-ladspa/: Cargo.toml
crates/big-space-ladspa/src/: lib.rs
crates/big-space/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/daemon/: Cargo.toml
crates/daemon/data/: bigsound-daemon.service
crates/daemon/data/profiles/: 00-default.json  10-laptop-speaker.json  20-headphones.json  21-headphones-cinema.json  30-bluetooth.json  40-hdmi.json  50-studio-reference.json  51-atmos-cinema.json  52-gaming.json  53-voice-podcast.json  54-bass-heavy.json  55-late-night.json  56-audiophile.json  57-live-concert.json  60-punchy.json
crates/daemon/src/: main.rs
crates/gtk-app/: Cargo.toml
crates/gtk-app/data/: com.bigcommunity.BigSound.desktop
crates/gtk-app/po/: pt_BR.po
crates/gtk-app/src/: main.rs
crates/ladspa-wrapper/: Cargo.toml
crates/ladspa-wrapper/src/: lib.rs
packaging/: PKGBUILD  bigsound.install
scripts/: ab-listen.sh  install.sh
