[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.7.1"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hound = "3"
zbus = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[profile.release]
lto = "thin"
codegen-units = 1
# Debug symbols are never useful in the shipped binaries (panics still
# print their message); stripping shrinks each artifact by several MB.
strip = "symbols"
